--- a/index.html
+++ b/index.html
@@ -5,80 +5,78 @@
 	</HEAD>
 
 	<BODY>
-    <h1>Community Manager</h1>
+    <ul><li>Community Manager</li>
 
-    <h2>Alan Favennec</h2>
+    <li>Alan Favennec</li>
 
-    <h2>Email : alanfavennec@gmail.com</h2>
+    <li>Email : alanfavennec@gmail.com</li>
 
-    <h2>Tel : 06 03 48 79 66</h2>
+    <li>Tel : 06 03 48 79 66</li>
 
-    <h2>32 rue eau de robec</h2>
-
-    <h2>76 000 Rouen</h2>
+    <li>32 rue eau de robec, 76 000 Rouen</li></ul>
 
     <h3>Formations et diplômes</h3>
 
-    - Septembre 2019 à Septembre 2020 : Bachelor Chef de Projet Marketing Digital (Titre RNCP niveau 2) à la Normandie Web School)
+    <ul><li>- Septembre 2019 à Septembre 2020 : Bachelor Chef de Projet Marketing Digital (Titre RNCP niveau 2) à la Normandie Web School)</li>
 
-    - Septembre 2017 à Juillet 2019 : Diplômé de formation de Web Concepteur avec mention aux :
+    <li>- Septembre 2017 à Juillet 2019 : Diplômé de formation de Web Concepteur avec mention aux :</li>
 
-    	- CESI (Centre des Etudes Supérieures et Industrielles)
+    	<ul><li>- CESI (Centre des Etudes Supérieures et Industrielles)</li>
+<li>- NWS (Normandie Web School) en Normandie</li></ul>
 
-    	- NWS (Normandie Web School) en Normandie
-
-    - Juin 2017 : Obtention du Baccalauréat ES
+    <li>- Juin 2017 : Obtention du Baccalauréat ES</li></ul>
 
     <h3>Expériences Professionnelles:</h3>
 
-    - Janvier à mai 2020 : Stage Normandie Web School (Petit Quevilly) de Community Manager :
+    <li>- Janvier à mai 2020 : Stage Normandie Web School (Petit Quevilly) de Community Manager :
 
-        - Création de contenus pour le blog et les réseaux sociaux de l'École
+        <ul><li>- Création de contenus pour le blog et les réseaux sociaux de l'École</li>
 
-        - Recensement de la NWS sur les sites d'annuaires post-bac et mise en place des informations de l'École
+        <li>- Recensement de la NWS sur les sites d'annuaires post-bac et mise en place des informations de l'École</li>
 
-        -Contribution active à la mise en place du site "Les Pontonautes" en mettant en place les fiches de commerçants et producteurs sur le site Wordpress
+        <li>-Contribution active à la mise en place du site "Les Pontonautes" en mettant en place les fiches de commerçants et producteurs sur le site Wordpress</li></ul>
 
-    - Juin 2019 : Stage Vidis Communication (Rouen) : second stage de deuxième année de web concepteur
+    <li>- Juin 2019 : Stage Vidis Communication (Rouen) : second stage de deuxième année de web concepteur</li>
 
-        - Promotion du "Snoop Doggy Bag" auprès des restaurants sur tous les réseaux sociaux
+        <ul><li>- Promotion du "Snoop Doggy Bag" auprès des restaurants sur tous les réseaux sociaux</li>
 
-        - Communication sur l'application mobile "Deeky" auprès des influenceurs
+        <li>- Communication sur l'application mobile "Deeky" auprès des influenceurs</ul></li>
 
-    - Mars à Mai 2019 : Stage Flying Gate (Rouen) : premier stage de deuxième année de web concepteur
+    <li>- Mars à Mai 2019 : Stage Flying Gate (Rouen) : premier stage de deuxième année de web concepteur</li>
 
-        - Intégration du contenu d'un site via WebsiteXcomedia5
+        <ul><li>- Intégration du contenu d'un site via WebsiteXcomedia5</li>
 
-        - Montage vidéo de présentation via Da Vinci Resolve
+        <li>- Montage vidéo de présentation via Da Vinci Resolve</li>
 
-        - Conception de logos d'entreprises via Gimp
+        <li>- Conception de logos d'entreprises via Gimp</ul></li>
 
-    - Mars à Mai 2018 : Stage CHU (Rouen) : Stage de première année de web concepteur au CNRLE Cryptosporidiose du CHU de Rouen
+    <li>- Mars à Mai 2018 : Stage CHU (Rouen) : Stage de première année de web concepteur au CNRLE Cryptosporidiose du CHU de Rouen
 
-        - Intégration du contenu d'un site via Wordpress
-        - Contribution à la communication d'un congrès international par e-mailing
+        <ul><li>- Intégration du contenu d'un site via Wordpress</li>
+        <li>- Contribution à la communication d'un congrès international par e-mailing</li></ul>
 
     <h3>Compétences</h3>
 
-    - HTML5 : 2,5/5    - CSS3 : 2,5/5
-
-    - Adobe Premiere pro : 4/5  - Logiciels de création graphiques : 2,5/5
-
-    - Réseaux Sociaux : 3/5 - Benchmark : 4/5
-
-    - Excel : 4/5   - Word : 4/5
-
-    - Contenu Wordpress : 4/5 - Anglais : 3/5
+    <ul><li>- HTML5 : 2,5/5</li>
+		<li>- CSS3 : 2,5/5</li>
+    <li>- Adobe Premiere pro : 4/5</li>
+		<li>- Logiciels de création graphiques : 2,5/5</li>
+    <li>- Réseaux Sociaux : 3/5</li>
+		<li>- Benchmark : 4/5</li>
+    <li>- Excel : 4/5</li>
+		<li>- Word : 4/5</li>
+    <li>- Contenu Wordpress : 4/5</li>
+		<li>- Anglais : 3/5</li></ul>
 
     <h3>Loisirs :</h3>
 
-    - Montage Vidéo YouTube avec Premiere pro
+    <ul><li>- Montage Vidéo YouTube avec Premiere pro</li>
 
-    - Jeux stratégiques de plateau (Warhammer 40.000)
+    <li>- Jeux stratégiques de plateau (Warhammer 40.000)</li>
 
-    -Jeux Vidéos :
-        - STR (Jeux de stratégie en Temps Réel) (Age Of Empires)
-        - FPS (First Person Shooter) (Rainbow 6 Siege)
-        - Jeux de Combat (Super Smash Bros)
+    <li>-Jeux Vidéos :</li>
+        <li><ul>- STR (Jeux de stratégie en Temps Réel) (Age Of Empires)</li>
+        <li>- FPS (First Person Shooter) (Rainbow 6 Siege)</li>
+        <li>- Jeux de Combat (Super Smash Bros)</li></ul></ul>
 	</BODY>
 </HTML>
