--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <HTML lang="fr">
 	<HEAD>
-		<meta charset="utf-8" />
+		<meta charset="utf8" />
 	</HEAD>
 
 	<BODY>
@@ -17,66 +17,66 @@
 
     <h3>Formations et diplômes</h3>
 
-    <ul><li>- Septembre 2019 à Septembre 2020 : Bachelor Chef de Projet Marketing Digital (Titre RNCP niveau 2) à la Normandie Web School)</li>
+    <ul><li>Septembre 2019 à Septembre 2020 : Bachelor Chef de Projet Marketing Digital (Titre RNCP niveau 2) à la Normandie Web School)</li>
 
-    <li>- Septembre 2017 à Juillet 2019 : Diplômé de formation de Web Concepteur avec mention aux :</li>
+    <li>Septembre 2017 à Juillet 2019 : Diplômé de formation de Web Concepteur avec mention aux :</li>
 
-    	<ul><li>- CESI (Centre des Etudes Supérieures et Industrielles)</li>
-<li>- NWS (Normandie Web School) en Normandie</li></ul>
+    	<ul><li>CESI (Centre des Etudes Supérieures et Industrielles)</li>
+<li>NWS (Normandie Web School) en Normandie</li></ul>
 
-    <li>- Juin 2017 : Obtention du Baccalauréat ES</li></ul>
+    <li>Juin 2017 : Obtention du Baccalauréat ES</li></ul>
 
     <h3>Expériences Professionnelles:</h3>
 
-    <li>- Janvier à mai 2020 : Stage Normandie Web School (Petit Quevilly) de Community Manager :
+    <li>Janvier à mai 2020 : Stage Normandie Web School (Petit Quevilly) de Community Manager :
 
-        <ul><li>- Création de contenus pour le blog et les réseaux sociaux de l'École</li>
+        <ul><li>Création de contenus pour le blog et les réseaux sociaux de l'École</li>
 
-        <li>- Recensement de la NWS sur les sites d'annuaires post-bac et mise en place des informations de l'École</li>
+        <li>Recensement de la NWS sur les sites d'annuaires postbac et mise en place des informations de l'École</li>
 
-        <li>-Contribution active à la mise en place du site "Les Pontonautes" en mettant en place les fiches de commerçants et producteurs sur le site Wordpress</li></ul>
+        <li>Contribution active à la mise en place du site "Les Pontonautes" en mettant en place les fiches de commerçants et producteurs sur le site Wordpress</li></ul>
 
-    <li>- Juin 2019 : Stage Vidis Communication (Rouen) : second stage de deuxième année de web concepteur</li>
+    <li>Juin 2019 : Stage Vidis Communication (Rouen) : second stage de deuxième année de web concepteur</li>
 
-        <ul><li>- Promotion du "Snoop Doggy Bag" auprès des restaurants sur tous les réseaux sociaux</li>
+        <ul><li>Promotion du "Snoop Doggy Bag" auprès des restaurants sur tous les réseaux sociaux</li>
 
-        <li>- Communication sur l'application mobile "Deeky" auprès des influenceurs</ul></li>
+        <li>Communication sur l'application mobile "Deeky" auprès des influenceurs</ul></li>
 
-    <li>- Mars à Mai 2019 : Stage Flying Gate (Rouen) : premier stage de deuxième année de web concepteur</li>
+    <li>Mars à Mai 2019 : Stage Flying Gate (Rouen) : premier stage de deuxième année de web concepteur</li>
 
-        <ul><li>- Intégration du contenu d'un site via WebsiteXcomedia5</li>
+        <ul><li>Intégration du contenu d'un site via WebsiteXcomedia5</li>
 
-        <li>- Montage vidéo de présentation via Da Vinci Resolve</li>
+        <li>Montage vidéo de présentation via Da Vinci Resolve</li>
 
-        <li>- Conception de logos d'entreprises via Gimp</ul></li>
+        <li>Conception de logos d'entreprises via Gimp</ul></li>
 
-    <li>- Mars à Mai 2018 : Stage CHU (Rouen) : Stage de première année de web concepteur au CNRLE Cryptosporidiose du CHU de Rouen
+    <li>Mars à Mai 2018 : Stage CHU (Rouen) : Stage de première année de web concepteur au CNRLE Cryptosporidiose du CHU de Rouen
 
-        <ul><li>- Intégration du contenu d'un site via Wordpress</li>
-        <li>- Contribution à la communication d'un congrès international par e-mailing</li></ul>
+        <ul><li>Intégration du contenu d'un site via Wordpress</li>
+        <li>Contribution à la communication d'un congrès international par emailing</li></ul>
 
     <h3>Compétences</h3>
 
-    <ul><li>- HTML5 : 2,5/5</li>
-		<li>- CSS3 : 2,5/5</li>
-    <li>- Adobe Premiere pro : 4/5</li>
-		<li>- Logiciels de création graphiques : 2,5/5</li>
-    <li>- Réseaux Sociaux : 3/5</li>
-		<li>- Benchmark : 4/5</li>
-    <li>- Excel : 4/5</li>
-		<li>- Word : 4/5</li>
-    <li>- Contenu Wordpress : 4/5</li>
-		<li>- Anglais : 3/5</li></ul>
+    <ul><li>HTML5 : 2,5/5</li>
+		<li>CSS3 : 2,5/5</li>
+    <li>Adobe Premiere pro : 4/5</li>
+		<li>Logiciels de création graphiques : 2,5/5</li>
+    <li>Réseaux Sociaux : 3/5</li>
+		<li>Benchmark : 4/5</li>
+    <li>Excel : 4/5</li>
+		<li>Word : 4/5</li>
+    <li>Contenu Wordpress : 4/5</li>
+		<li>Anglais : 3/5</li></ul>
 
     <h3>Loisirs :</h3>
 
-    <ul><li>- Montage Vidéo YouTube avec Premiere pro</li>
+    <ul><li>Montage Vidéo YouTube avec Premiere pro</li>
 
-    <li>- Jeux stratégiques de plateau (Warhammer 40.000)</li>
+    <li>Jeux stratégiques de plateau (Warhammer 40.000)</li>
 
-    <li>-Jeux Vidéos :</li>
-        <li><ul>- STR (Jeux de stratégie en Temps Réel) (Age Of Empires)</li>
-        <li>- FPS (First Person Shooter) (Rainbow 6 Siege)</li>
-        <li>- Jeux de Combat (Super Smash Bros)</li></ul></ul>
+    <li>Jeux Vidéos :</li>
+        <li><ul> STR (Jeux de stratégie en Temps Réel) (Age Of Empires)</li>
+        <li>FPS (First Person Shooter) (Rainbow 6 Siege)</li>
+        <li>Jeux de Combat (Super Smash Bros)</li></ul></ul>
 	</BODY>
 </HTML>
