modif html final final

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 	</HEAD>
 
 	<BODY>
-    <ul><li>Community Manager</li>
+    <h1>Community Manager</h1>
 
-    <li>Alan Favennec</li>
+    <h2>Alan Favennec</h2>
 
-    <li>Email : alanfavennec@gmail.com</li>
+    <ul>ol<li>Email : alanfavennec@gmail.com</li>
 
     <li>Tel : 06 03 48 79 66</li>
 
@@ -17,43 +17,43 @@
 
     <h3>Formations et diplômes</h3>
 
-    <ul><li>Septembre 2019 à Septembre 2020 : Bachelor Chef de Projet Marketing Digital (Titre RNCP niveau 2) à la Normandie Web School)</li>
+    <ul><ol>Septembre 2019 à Septembre 2020 : Bachelor Chef de Projet Marketing Digital (Titre RNCP niveau 2) à la Normandie Web School)</ol>
 
-    <li>Septembre 2017 à Juillet 2019 : Diplômé de formation de Web Concepteur avec mention aux :</li>
+    <ol>Septembre 2017 à Juillet 2019 : Diplômé de formation de Web Concepteur avec mention aux :</ol>
 
     	<ul><li>CESI (Centre des Etudes Supérieures et Industrielles)</li>
 <li>NWS (Normandie Web School) en Normandie</li></ul>
 
-    <li>Juin 2017 : Obtention du Baccalauréat ES</li></ul>
+    <ol>Juin 2017 : Obtention du Baccalauréat ES</ol></ul>
 
     <h3>Expériences Professionnelles:</h3>
 
-    <li>Janvier à mai 2020 : Stage Normandie Web School (Petit Quevilly) de Community Manager :
+    <ol>Janvier à mai 2020 : Stage Normandie Web School (Petit Quevilly) de Community Manager :
 
         <ul><li>Création de contenus pour le blog et les réseaux sociaux de l'École</li>
 
         <li>Recensement de la NWS sur les sites d'annuaires postbac et mise en place des informations de l'École</li>
 
-        <li>Contribution active à la mise en place du site "Les Pontonautes" en mettant en place les fiches de commerçants et producteurs sur le site Wordpress</li></ul>
+        <li>Contribution active à la mise en place du site "Les Pontonautes" en mettant en place les fiches de commerçants et producteurs sur le site Wordpress</li></ol></ul>
 
-    <li>Juin 2019 : Stage Vidis Communication (Rouen) : second stage de deuxième année de web concepteur</li>
+    <ol>Juin 2019 : Stage Vidis Communication (Rouen) : second stage de deuxième année de web concepteur</li>
 
         <ul><li>Promotion du "Snoop Doggy Bag" auprès des restaurants sur tous les réseaux sociaux</li>
 
-        <li>Communication sur l'application mobile "Deeky" auprès des influenceurs</ul></li>
+        <li>Communication sur l'application mobile "Deeky" auprès des influenceurs</ul></ol></li>
 
-    <li>Mars à Mai 2019 : Stage Flying Gate (Rouen) : premier stage de deuxième année de web concepteur</li>
+    <ol>Mars à Mai 2019 : Stage Flying Gate (Rouen) : premier stage de deuxième année de web concepteur</li>
 
         <ul><li>Intégration du contenu d'un site via WebsiteXcomedia5</li>
 
         <li>Montage vidéo de présentation via Da Vinci Resolve</li>
 
-        <li>Conception de logos d'entreprises via Gimp</ul></li>
+        <li>Conception de logos d'entreprises via Gimp</ul></ol></li>
 
-    <li>Mars à Mai 2018 : Stage CHU (Rouen) : Stage de première année de web concepteur au CNRLE Cryptosporidiose du CHU de Rouen
+    <ol>Mars à Mai 2018 : Stage CHU (Rouen) : Stage de première année de web concepteur au CNRLE Cryptosporidiose du CHU de Rouen
 
         <ul><li>Intégration du contenu d'un site via Wordpress</li>
-        <li>Contribution à la communication d'un congrès international par emailing</li></ul>
+        <li>Contribution à la communication d'un congrès international par emailing</li></ol></ul>
 
     <h3>Compétences</h3>
 
