modif html final final final

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <h2>Alan Favennec</h2>
 
-    <ul>ol<li>Email : alanfavennec@gmail.com</li>
+    <ul><li>Email : alanfavennec@gmail.com</li>
 
     <li>Tel : 06 03 48 79 66</li>
 
