modif ders des ders stp

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <li>Jeux stratégiques de plateau (Warhammer 40.000)</li>
 
     <li>Jeux Vidéos :</li>
-        <li><ul> STR (Jeux de stratégie en Temps Réel) (Age Of Empires)</li>
+        <ul><li>STR (Jeux de stratégie en Temps Réel) (Age Of Empires)</li>
         <li>FPS (First Person Shooter) (Rainbow 6 Siege)</li>
         <li>Jeux de Combat (Super Smash Bros)</li></ul></ul>
 	</BODY>
